<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>io.quarkiverse</groupId>
        <artifactId>quarkiverse-parent</artifactId>
        <version>21</version>
    </parent>
    <groupId>io.quarkiverse.backstage</groupId>
    <artifactId>quarkus-backstage-parent</artifactId>
    <version>999-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>Quarkus Backstage - Parent</name>

    <scm>
        <connection>scm:git:git@github.com:quarkiverse/quarkus-backstage.git</connection>
        <developerConnection>scm:git:git@github.com:quarkiverse/quarkus-backstage.git</developerConnection>
        <url>https://github.com/quarkiverse/quarkus-backstage</url>
        <tag>HEAD</tag>
    </scm>

    <modules>
        <module>model-generator</module>
        <module>spi</module>
        <module>common</module>
        <module>client</module>
        <module>deployment</module>
        <module>runtime</module>
        <module>cli</module>
    </modules>

    <properties>
        <compiler-plugin.version>3.15.0</compiler-plugin.version>
        <maven.compiler.release>17</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <!-- versions -->
        <quarkus.version>3.34.3</quarkus.version>
        <jandex.version>3.5.3</jandex.version>
        <lombok.version>1.18.44</lombok.version>
        <sundr.version>0.101.0</sundr.version>
        <rs-api.version>4.0.0</rs-api.version>
        <slf4j.version>2.0.17</slf4j.version>

        <!-- quarkiverse -->
        <quarkus-argocd.version>0.4.0</quarkus-argocd.version>
        <quarkus-jgit.version>3.6.2</quarkus-jgit.version>
        <quarkus-helm.version>1.4.0</quarkus-helm.version>
        <quarkus-mcp-server.version>1.11.1</quarkus-mcp-server.version>

        <surefire-plugin.version>3.5.5</surefire-plugin.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.quarkus</groupId>
                <artifactId>quarkus-bom</artifactId>
                <version>${quarkus.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>io.quarkiverse.helm</groupId>
                <artifactId>quarkus-helm-spi</artifactId>
                <version>${quarkus-helm.version}</version>
            </dependency>
            <dependency>
                <groupId>io.quarkiverse.argocd</groupId>
                <artifactId>quarkus-argocd-spi</artifactId>
                <version>${quarkus-argocd.version}</version>
            </dependency>
            <dependency>
                <groupId>io.smallrye</groupId>
                <artifactId>jandex</artifactId>
                <version>${jandex.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>io.quarkus</groupId>
                    <artifactId>quarkus-maven-plugin</artifactId>
                    <version>${quarkus.version}</version>
                </plugin>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${compiler-plugin.version}</version>
                    <configuration>
                        <compilerArgs>
                            <arg>-parameters</arg>
                        </compilerArgs>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>${lombok.version}</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
    <profiles>
        <profile>
            <id>docs</id>
            <activation>
                <property>
                    <name>performRelease</name>
                    <value>!true</value>
                </property>
            </activation>
            <modules>
                <module>docs</module>
            </modules>
        </profile>
        <profile>
            <id>it</id>
            <activation>
                <property>
                    <name>performRelease</name>
                    <value>!true</value>
                </property>
            </activation>
            <modules>
                <module>integration-tests</module>
            </modules>
        </profile>
    </profiles>
</project>
